fixed layout issue for sampling sites

--- a/bootstrap4-minimal/assets/css/custom/includes/table.scss
+++ b/bootstrap4-minimal/assets/css/custom/includes/table.scss
@@ -41,20 +41,3 @@
 .hidden {
 	display: none !important;
 }
-
-
-
-@media (orientation: portrait) {
-	td, th {
-		display: none !important;
-
-		&:nth-child(2), &:nth-child(1) {
-			display: block !important;
-		}
-	}
-
-	.cell {
-		max-width: 50% !important;
-		flex: 0 0 50% !important;
-	}
-}
